force-app/main/default/objects/CCL_WizardStep__mdt/CCL_WizardStep__mdt.object-meta.xml
<CustomObject>
    <description>Metadata configuration driving a step that composes a Wizard (PRF, ADF...)</description>
    <label>Wizard Step</label>
    <pluralLabel>Wizard Steps</pluralLabel>
</CustomObject>