force-app/main/default/objects/CCL_WizardStep__mdt/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Type of component fro this Wizard step</description>
    <inlineHelpText>Type of component fro this Wizard step</inlineHelpText>
    <label>Component</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRF_START</fullName>
                <default>true</default>
                <label>PRF_START</label>
            </value>
            <value>
                <fullName>Wizard_Fieldset</fullName>
            </value>
            <value>
                <fullName>PRF_Logistics</fullName>
            </value>
            <value>
                <fullName>ADF_START</fullName>
            </value>
            <value>
                <fullName>ADF_Cryobags</fullName>
            </value>
            <value>
                <fullName>PRF_END</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>