force-app/main/default/objects/CCL_WizardStep__mdt/fields/Field_name__c.field-meta.xml
<CustomField>
    <fullName>Field_name__c</fullName>
    <description>Field to be updated</description>
    <inlineHelpText>Field to be updated</inlineHelpText>
    <label>Field name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>