force-app/main/default/objects/CCL_WizardStep__mdt/fields/FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieldSet__c</fullName>
    <description>Name of the Field Set to use with this Wizard step</description>
    <inlineHelpText>Name of the Field Set to use with this Wizard step</inlineHelpText>
    <label>Field Set</label>
    <length>250</length>
    <type>Text</type>
</CustomField>