force-app/main/default/objects/CCL_WizardStep__mdt/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <description>Name of the object the Wizard step will persist against (ex: Case, PRF__c)</description>
    <inlineHelpText>Name of the object the Wizard step will persist against (ex: Case, PRF__c)</inlineHelpText>
    <label>Object Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>