force-app/main/default/objects/CCL_WizardStep__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order number in the Wizard</description>
    <inlineHelpText>Order number in the Wizard</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>