force-app/main/default/objects/CCL_WizardStep__mdt/fields/SectionDescription__c.field-meta.xml
<CustomField>
    <fullName>SectionDescription__c</fullName>
    <description>Description to be displayed for this Wizard step</description>
    <inlineHelpText>Description to be displayed for this Wizard step</inlineHelpText>
    <label>Section Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>