force-app/main/default/objects/CCL_WizardStep__mdt/fields/WizardConfiguration__c.field-meta.xml
<CustomField>
    <fullName>WizardConfiguration__c</fullName>
    <description>Wizard configuration this step is a part of</description>
    <inlineHelpText>Wizard configuration this step is a part of</inlineHelpText>
    <label>Wizard Configuration</label>
    <referenceTo>CCL_Wizard_Configuration__mdt</referenceTo>
    <relationshipLabel>Wizard Steps</relationshipLabel>
    <relationshipName>Wizard_Steps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>