force-app/main/default/objects/CCL_WizardStep__mdt/listViews/AllFields.listView-meta.xml
<ListView>
    <fullName>AllFields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>Component__c</columns>
    <columns>FieldSet__c</columns>
    <columns>ObjectType__c</columns>
    <columns>Order__c</columns>
    <columns>SectionDescription__c</columns>
    <columns>WizardConfiguration__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllFields</label>
</ListView>